--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     
     <div class="card-footer">
-      <span> <a href="https://github.com/crazypeace/Url-Shorten-Worker/" target="_self">Fork me on GitHub</a> </span>
+      <span> <a href="https://gimhoy.com" target="_self">Gimhoy Studio</a> </span>
     </div>
   </div>
 
@@ -97,9 +97,9 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/gh/lrsjng/jquery-qrcode@0.18.0/dist/jquery-qrcode.min.js" crossorigin="anonymous"></script>
 
-  <script src="https://crazypeace.github.io/Url-Shorten-Worker/main.js" crossorigin="anonymous"></script>
+  <script src="https://gimhoy.github.io/Url-Shorten-Worker/main.js" crossorigin="anonymous"></script>
   <!-- 如果使用CDN资源就放开这一句, 把上面那一句注释掉
-    <script src="https://cdn.jsdelivr.net/gh/crazypeace/Url-Shorten-Worker/main.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/gh/gimhoy/Url-Shorten-Worker/main.js" crossorigin="anonymous"></script>
   -->
 </body>
 </html>
