--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             <div class="input-group">
               <button type="button" class="btn btn-danger" onclick='deleteShortUrl("4sure")' id="delBtn-4sure">X</button>
               <button type="button" class="btn btn-info" onclick='queryVisitCount("4sure")' id="qryCntBtn-4sure">?</button>
+              <span class="form-control">https://dlink.host</span>
+            </div>
+            <div class="form-control">
+              https://dlink.host
             </div>
           </div>
         </div>
